# Parking-Rat

./: LICENSE  README.md  succesful_run_example.txt
docker_viewer/: README.md  commands.txt  ratcam.py  view.sh
phase_1/: README.md
phase_1/behaviors/color_detection/: README.md
phase_1/calibration/wheel/: calib_gain.py  calib_trim.py  calibration_general_updated.py  drive_1m.py
phase_1/config/motion/: kinematics.yaml
phase_1/config/vision/: parameters.yaml
phase_1/docs/: source_inventory.md
phase_1/drivers/display/: README.md  show_battery.py
phase_1/drivers/imu/: imu_reader_node.py
phase_1/drivers/tof/: main.py
phase_1/install/: local_setup.sh  setup.sh
phase_1/install/color_detection_mode/share/color_detection_mode/: package.bash  package.sh  package.xml
phase_1/install/color_detection_mode/share/color_detection_mode/launch/: color_detection_mode.launch.py  go_stop.launch.py
phase_1/launch/parking/: aruco_parking.launch.py
phase_1/launch/vision/: camera_pipeline.launch.py  camera_processor.launch.py
phase_2/calibration/wheel/: calibrate_final.py  calibration.py  calibration_general.py  kinematics.yaml  motorDriver.py
phase_2/config/motion/: kinematics.yaml
phase_2/docs/: dependencies.txt
phase_2/drivers/button/: main.py
phase_2/drivers/display/: main.py
phase_2/drivers/imu/: imuDriver.py  imu_printer_node.py
phase_2/drivers/tof/: tofDriver.py
phase_2/install/: local_setup.sh  setup.sh
phase_2/launch/: full_mission.launch.py
phase_2/log/: latest_build
phase_2/testscripts/: calibrate_exposure_camera.py
(+140 files in other folders)
